# gen-net-sim

netsim/pars/: CMakeLists.txt  Makefile  cmake_install.cmake  pars.c  pars.h  prova.c
netsim/sim/: .RData  .Rhistory  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  Makevars  Makevars.win  R2Clib.cbp  analizza.pl  analizza1.pl  assign_nodes.c  assign_nodes.h  boole_result.c  boole_result.h  calc.c  calc.h  check_conn.c  check_conn.h  cluster_coeff.c  cluster_coeff.h  cmake_install.cmake  cmd.exe.stackdump  comandi.txt  connectivity_geometric.c  connectivity_geometric.h  connectivity_modular.c  connectivity_modular.h  connectivity_random.c  connectivity_random.h  connectivity_scalefree.c  connectivity_scalefree.h  conta_codice.pl  createNEG.c  createNEG.h  createRules.c  createRules.h  create_logicRule.c  create_logicRule.h  dinamica.c  (+85 more)
simbionet/: CMakeLists.txt  HMM.R  HMM.c  HMM.h  HMM_res.rc  HMM_und.c  HMM_und.h  HMMund.R  Hierarch_level1.txt  Hierarch_level10.txt  Makefile  Makevars.win  assign_nodes.c  assign_nodes_und.c  assign_nodes_und.h  cf_cl.R  check_conn.c  check_conn.h  cluster_coeff.c  cluster_coeff.h  cmake_install.cmake  connetti_scalefree.c  connetti_scalefree.h  createMOD.R  create_mod.c  create_mod.h  distrib.c  distrib.h  globali.c  globali.h  globali.pl  gmon.out  hist.c  hist.h  hubs.c  hubs.h  memoria_d.txt  memoria_i.txt  memoria_lst.csv  memoria_lst.txt  (+45 more)
simbionet/autoreg_modules/: M2.txt  M2ind.txt  M4.txt
simbionet/hmm_det_R/: DESCRIPTION
simbionet/hmm_det_R/R/: HMM.R  HMMund.R  Scoremodular.R  assign.nodes.R  assign.nodes.und.R  check.conn.R  cluster.coeff.R  connetti.scalefree.R  createMOD.R  distrib.R  hubs.R  init.R  pathlength.R  probmod.R  probmod.und.R  sampleB.R  sampleB.R.bak
simbionet/hmm_det_R/inst/autoreg_modules/: M2.txt  M3.txt  M3ind.txt  M4.txt  M4ind.txt
simbionet/hmm_det_R/inst/modules/: M2.txt  M2ind.txt  M3.txt  M3ind.txt  M4.txt  M4ind.txt
simbionet/simbionet.v1_skel/: DESCRIPTION  NAMESPACE
simbionet/simbionet.v1_skel/R/: SBNT.R  UNSBNT.R  createMOD.R
simbionet/simbionet.v1_skel/inst/autoreg_modules/: M2ind.txt  M3.txt  M3ind.txt  M4ind.txt
simbionet/simbionet.v1_skel/inst/modules/: M2.txt  M2ind.txt  M3.txt  M3ind.txt  M4.txt  M4ind.txt
simbionet/simbionet.v1_skel/man/: SBNT.Rd  UNSBNT.Rd  createMOD.Rd
simbionet/testset/: riepilogo_test.xls
simbionet/testset/prova_HMM/R/: prova_HMM.R
simbionet/testset/prova_HMM/distrib/: Hierarch_level1.txt  memoria_d.txt  memoria_i.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  passi.txt  prova_HMM.R  topology_1.txt
simbionet/testset/prova_HMM_Cfcl/: prova_HMM.R
simbionet/testset/prova_HMM_Cfcl/R/: prova_HMM.R
simbionet/testset/prova_HMM_Cfcl/distrib/: memoria_d.txt  memoria_i.txt  memoria_lst.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  passi.txt  topology_1.txt
simbionet/testset/prova_HMM_deg/R/: prova_HMM.R
simbionet/testset/prova_HMM_deg/distrib/: memoria_d.txt  memoria_i.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  passi.txt  prova_HMM.R  topology_1.txt
simbionet/testset/prova_HMM_fb/: prova_HMM.R
simbionet/testset/prova_HMM_fb/R/: prova_HMM.R
simbionet/testset/prova_HMM_fb/distrib/: memoria_d.txt  memoria_i.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  passi.txt  topology_1.txt
simbionet/testset/prova_HMM_gamma/: prova_HMM.R
simbionet/testset/prova_HMM_gamma/R/: prova_HMM.R
simbionet/testset/prova_HMM_gamma/distrib/: memoria_d.txt  memoria_lst.csv  memoria_lst.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  moduli_R.txt  passi.txt  topology_1.txt
simbionet/testset/prova_HMM_indeg/R/: prova_HMM.R
simbionet/testset/prova_HMM_indeg/distrib/: memoria_d.txt  memoria_i.txt  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  passi.txt  prova_HMM.R  topology_1.txt
simbionet/testset/prova_HMM_iter/: prova_HMM.R  topology_1.txt  topology_2.txt  topology_3.txt
simbionet/testset/prova_HMM_priorp/: prova_HMM.R
simbionet/testset/prova_HMM_priorp/R/: prova_HMM.R
simbionet/testset/prova_HMM_priorp/distrib/: Hierarch_level1.txt  memoria_d.txt  memoria_i.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  passi.txt  topology_1.txt
simbionet/testset/prova_HMM_sg/: prova_HMM.R
simbionet/testset/prova_HMM_sg/R/: prova_HMM.R
simbionet/testset/prova_HMM_sg/distrib/: memoria_d.txt  memoria_i.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  passi.txt  topology_1.txt
simbionet/testset/prova_HMM_zn/: prova_HMM.R
simbionet/testset/prova_HMM_zn/R/: prova_HMM.R
simbionet/testset/prova_HMM_zn/distrib/: memoria_d.txt  memoria_i.txt  memoria_lst.csv  memoria_lst.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  passi.txt  topology_1.txt
simbionet/testset/prova_HMMund/: prova_HMMund.R
simbionet/testset/prova_HMMund/R/: prova_HMMund.R
simbionet/testset/prova_HMMund/distrib/: memoria_d.txt  memoria_i.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  passi.txt  topology_1.txt
simbionet/testset/prova_HMMund_cfcl/R/: prova_HMMund.R
simbionet/testset/prova_HMMund_cfcl/distrib/: memoria_d.txt  memoria_i.txt  memoria_lst.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  moduli.txt  passi.txt  prova_HMMund.R  topology_1.txt
simbionet/testset/prova_HMMund_deg/: prova_HMMund.R
simbionet/testset/prova_HMMund_deg/R/: prova_HMMund.R
simbionet/testset/prova_HMMund_deg/distrib/: memoria_d.txt  memoria_i.txt  memoria_lst.txt  memoria_m_d.csv  memoria_m_i.csv  memoria_v_d.csv  memoria_v_i.csv  (+4 more)
simbionet/testset/prova_HMMund_iter/: Hierarch_level3.txt  prova_HMMund.R  topology_1.txt  topology_3.txt
simbionet/testset/prova_HMMund_sg/: prova_HMMund.R
simbionet/testset/prova_cm_auto/: mod_c.txt  prova_createMOD.R
simbionet/testset/prova_cm_m/: mod_c.txt  mod_r.txt  prova_createMOD.R
(+487 files in other folders)
